Update dependecnies and migrate to Java 21